// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmActionDialog does not render dialog if not open 1`] = `<div />`;

exports[`ConfirmActionDialog renders confirm delete dialog 1`] = `
<div>
  <div>
    <h1
      class="jsx-3701517325 title"
      data-test="dhis2-uicore-modaltitle"
    >
      Delete dashboard
    </h1>
    <div
      class="jsx-659511263 "
      data-test="dhis2-uicore-modalcontent"
    >
      <span
        class="content"
      >
        Deleting dashboard "Twilight Sparkle" will remove it for all users. This action cannot be undone. Are you sure you want to permanently delete this dashboard?
      </span>
    </div>
    <div
      class="jsx-752323619"
      data-test="dhis2-uicore-modalactions"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 secondary"
            data-test="dhis2-uicore-button"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 destructive"
            data-test="dhis2-uicore-button"
            type="button"
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfirmActionDialog renders discard changes dialog 1`] = `
<div>
  <div>
    <h1
      class="jsx-3701517325 title"
      data-test="dhis2-uicore-modaltitle"
    >
      Discard changes
    </h1>
    <div
      class="jsx-659511263 "
      data-test="dhis2-uicore-modalcontent"
    >
      <span
        class="content"
      >
        This dashboard has unsaved changes. Are you sure you want to leave and discard these unsaved changes?
      </span>
    </div>
    <div
      class="jsx-752323619"
      data-test="dhis2-uicore-modalactions"
    >
      <div
        class="jsx-71743532 start"
        data-test="dhis2-uicore-buttonstrip"
      >
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 secondary"
            data-test="dhis2-uicore-button"
            type="button"
          >
            No, stay here
          </button>
        </div>
        <div
          class="jsx-71743532 box"
        >
          <button
            class="jsx-2371629422 destructive"
            data-test="dhis2-uicore-button"
            type="button"
          >
            Yes, discard changes
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
